feat(catalog): qualify SmolLM2 native RAG